--- a/sample/index.html
+++ b/sample/index.html
@@ -1,73 +1,369 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>CKEditor 5 – document editor build – development sample</title>
-	<style>
-		body {
-			max-width: 1000px;
-			margin: 20px auto;
-		}
-	</style>
-</head>
-<body>
+  <head>
+    <meta charset="utf-8" />
+    <title>TAXER Document Editor</title>
+    <style>
+      body {
+        max-width: 1300px;
+        margin: 20px auto;
+      }
+      .document-editor {
+        border: 1px solid var(--ck-color-base-border);
+        border-radius: var(--ck-border-radius);
+        max-height: 700px;
+        display: flex;
+        flex-flow: column nowrap;
+      }
+      .document-editor__toolbar {
+        z-index: 1;
+        box-shadow: 0 0 5px hsla(0, 0%, 0%, 0.2);
+        border-bottom: 1px solid var(--ck-color-toolbar-border);
+      }
+      .document-editor__toolbar .ck-toolbar {
+        border: 0;
+        border-radius: 0;
+      }
+      .document-editor__editable-container {
+        padding: calc(2 * var(--ck-spacing-large));
+        background: var(--ck-color-base-foreground);
+        overflow-y: scroll;
+      }
+      .document-editor__editable-container .ck-editor__editable {
+        width: 15.8cm;
+        min-height: 21cm;
+        padding: 1cm 2cm 2cm;
+        border: 1px hsl(0, 0%, 82.7%) solid;
+        border-radius: var(--ck-border-radius);
+        background: white;
+        box-shadow: 0 0 5px hsla(0, 0%, 0%, 0.1);
+        margin: 0 auto;
+      }
+      .ck-list {
+          max-height: 400px;
+          overflow-y: auto;
+      }
+      .document-editor .ck-content,
+      .document-editor .ck-heading-dropdown .ck-list .ck-button__label {
+        font: 16px/1.6 "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+      .document-editor .ck-heading-dropdown .ck-list .ck-button__label {
+        line-height: calc(
+          1.7 * var(--ck-line-height-base) * var(--ck-font-size-base)
+        );
+        min-width: 6em;
+      }
+      .document-editor
+        .ck-heading-dropdown
+        .ck-list
+        .ck-button:not(.ck-heading_paragraph)
+        .ck-button__label {
+        transform: scale(0.8);
+        transform-origin: left;
+      }
+      .document-editor .ck-content h2,
+      .document-editor
+        .ck-heading-dropdown
+        .ck-heading_heading1
+        .ck-button__label {
+        font-size: 2.18em;
+        font-weight: normal;
+      }
+      .document-editor .ck-content h2 {
+        line-height: 1.37em;
+        padding-top: 0.342em;
+        margin-bottom: 0.142em;
+      }
+      .document-editor .ck-content h3,
+      .document-editor
+        .ck-heading-dropdown
+        .ck-heading_heading2
+        .ck-button__label {
+        font-size: 1.75em;
+        font-weight: normal;
+        color: hsl(203, 100%, 50%);
+      }
+      .document-editor
+        .ck-heading-dropdown
+        .ck-heading_heading2.ck-on
+        .ck-button__label {
+        color: var(--ck-color-list-button-on-text);
+      }
+      .document-editor .ck-content h3 {
+        line-height: 1.86em;
+        padding-top: 0.171em;
+        margin-bottom: 0.357em;
+      }
+      .document-editor .ck-content h4,
+      .document-editor
+        .ck-heading-dropdown
+        .ck-heading_heading3
+        .ck-button__label {
+        font-size: 1.31em;
+        font-weight: bold;
+      }
 
-<h1>CKEditor 5 – document editor build – development sample</h1>
+      .document-editor .ck-content h4 {
+        line-height: 1.24em;
+        padding-top: 0.286em;
+        margin-bottom: 0.952em;
+      }
+      .document-editor .ck-content p {
+        font-size: 1em;
+        line-height: 1.63em;
+        padding-top: 0.5em;
+        margin-bottom: 1.13em;
+      }
+      .document-editor .ck-content blockquote {
+        font-family: Georgia, serif;
+        margin-left: calc(2 * var(--ck-spacing-large));
+        margin-right: calc(2 * var(--ck-spacing-large));
+      }
+      #copyBtn {
+        border: none;
+        background: navajowhite;
+        color: #c29393;
+        font-size: 18px;
+        font-weight: 500;
+        padding: 5px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.5s all ease;
+      }
+      #copyBtn:hover {
+        background: #d9932f;
+        color: #f5f1f1;
+      }
+      .btn-container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+      }
+      .placeholder {
+        background: #ffff00;
+        padding: 4px 2px;
+        outline-offset: -2px;
+        line-height: 1em;
+        margin: 0 1px;
+      }
 
-<h2>The toolbar</h2>
-<div class="toolbar-container"></div>
+      .placeholder::selection {
+        display: none;
+      }
+    </style>
+  </head>
+  <body>
+    <h1 style="text-align: center">TAXER Document Editor</h1>
 
-<h2>The editable</h2>
-<div class="editable-container"></div>
+    <div class="btn-container">
+      <button id="copyBtn">Скопіювати в буфер обміну</button>
+    </div>
 
-<style>
-	.editable-container,
-	.toolbar-container {
-		position: relative;
-		border: 1px solid #ddd;
-		background: #eee;
-	}
+    <div class="document-editor">
+      <div class="document-editor__toolbar"></div>
+      <div class="document-editor__editable-container">
+        <div class="document-editor__editable">
+          <figure class="table">
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <span style="color: rgb(0, 0, 0)"
+                      ><strong>Постачальник:</strong></span
+                    >
+                  </td>
+                  <td>
+                    <p>
+                      <span class="placeholder" name="username"
+                        >Назва профілю</span
+                      >
+                    </p>
+                    <p>
+                      ІПН:&nbsp;<span class="placeholder" name="IPN">ІПН</span>
+                    </p>
+                    <p>
+                      <span class="placeholder" name="address">Адреса</span>
+                    </p>
+                    <p>
+                      IBAN&nbsp;<span class="placeholder" name="IBAN"
+                        >IBAN</span
+                      >
+                    </p>
+                    <p>
+                      <span class="placeholder" name="isPayable"
+                        >Платник податків</span
+                      >
+                    </p>
+                    <p>&nbsp;</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <span style="color: rgb(0, 0, 0)"
+                      ><strong>Одержувач:</strong></span
+                    >
+                  </td>
+                  <td>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </figure>
+          <p>&nbsp;</p>
+          <figure class="table">
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>№</strong></span
+                      >
+                    </p>
+                  </td>
+                  <td>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Найменування</strong></span
+                      >
+                    </p>
+                  </td>
+                  <td>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Кількість</strong></span
+                      >
+                    </p>
+                  </td>
+                  <td>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Од. вим.</strong></span
+                      >
+                    </p>
+                  </td>
+                  <td>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Ціна</strong></span
+                      >
+                    </p>
+                  </td>
+                  <td>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Сума</strong></span
+                      >
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td><p style="text-align: center">1</p></td>
+                  <td>123</td>
+                  <td>123</td>
+                  <td>123</td>
+                  <td><p style="text-align: right">123,00</p></td>
+                  <td><p style="text-align: right">15129,00</p></td>
+                </tr>
+              </tbody>
+            </table>
+          </figure>
+          <figure class="table">
+            <table>
+              <tbody>
+                <tr>
+                  <td><strong>Усього:</strong></td>
+                  <td><span class="placeholder" name="total">Усього</span></td>
+                </tr>
+              </tbody>
+            </table>
+          </figure>
+          <p>&nbsp;</p>
+          <figure class="table">
+            <table>
+              <tbody>
+                <tr>
+                  <td>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>&nbsp;</p>
+                    <p>
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Відвантажив(ла):</strong
+                        >&nbsp;_________________</span
+                      >
+                    </p>
+                    <p>
+                      <span class="placeholder" name="username"
+                        >Назва профілю</span
+                      >
+                    </p>
+                    <p>&nbsp;</p>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)">М.П.</span>
+                    </p>
+                    <p>&nbsp;</p>
+                  </td>
+                  <td>
+                    <p>
+                      <span style="color: rgb(0, 0, 0)"
+                        >Товар отримано у повному обсязі. Зауважень щодо
+                        комплектності та наявності пошкоджень товару не
+                        маю.</span
+                      >
+                    </p>
+                    <p>&nbsp;</p>
+                    <p>
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>Отримав(ла): ___________________</strong></span
+                      >
+                    </p>
+                    <p>
+                      <span style="color: rgb(0, 0, 0)"
+                        ><strong>&nbsp;</strong></span
+                      >
+                    </p>
+                    <p>&nbsp;</p>
+                    <p style="text-align: center">
+                      <span style="color: rgb(0, 0, 0)">М.П.</span>
+                    </p>
+                    <p>&nbsp;</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </figure>
+        </div>
+      </div>
+    </div>
 
-	.toolbar-container {
-		padding: 1em;
-	}
+    <script src="../build/ckeditor.js"></script>
+    <script>
+      let documentEditor = null;
+      DecoupledEditor.create(
+        document.querySelector(".document-editor__editable")
+      )
+        .then((editor) => {
+          const toolbarContainer = document.querySelector(
+            ".document-editor__toolbar"
+          );
 
-	.editable-container {
-		padding: 3em;
-		overflow-y: scroll;
-		max-height: 500px;
-	}
-
-	.editable-container .ck-content {
-		min-height: 21cm;
-		padding: 2em;
-		border: 1px #D3D3D3 solid;
-		border-radius: var(--ck-border-radius);
-		background: white;
-		box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-	}
-</style>
-
-<script src="../build/ckeditor.js"></script>
-<script>
-	const editorData = `<h2>Sample</h2>
-		<p>This is an instance of the <a href="https://ckeditor.com/docs/ckeditor5/latest/installation/getting-started/predefined-builds.html#document-editor">document editor build</a>.</p>
-		<figure class="image">
-			<img src="../tests/manual/sample.jpg" alt="Autumn fields" />
-		</figure>
-		<p>You can use this sample to validate whether your <a href="https://ckeditor.com/docs/ckeditor5/latest/installation/advanced/alternative-setups/custom-builds.html">custom build</a> works fine.</p>`;
-
-	DecoupledEditor.create( editorData )
-		.then( editor => {
-			window.editor = editor;
-
-			document.querySelector( '.toolbar-container' ).appendChild( editor.ui.view.toolbar.element );
-			document.querySelector( '.editable-container' ).appendChild( editor.ui.view.editable.element );
-		} )
-		.catch( error => {
-			console.error( 'There was a problem initializing the editor.', error );
-		} );
-</script>
-
-</body>
+          toolbarContainer.appendChild(editor.ui.view.toolbar.element);
+          documentEditor = editor;
+          window.editor = editor;
+        })
+        .catch((error) => {
+          console.error("There was a problem initializing the editor.", error);
+        });
+      const copyBtn = document.getElementById("copyBtn");
+      copyBtn.addEventListener("click", async () => {
+        await navigator.clipboard.writeText(editor.getData());
+        alert("HTML успішно скопійовано.");
+      });
+    </script>
+  </body>
 </html>
