Добавив переклад і аттрибут multiple для placeholder Відпретерив sample Зробив можливість передачі данних ззовні

--- a/sample/index.html
+++ b/sample/index.html
@@ -40,8 +40,8 @@
         margin: 0 auto;
       }
       .ck-list {
-          max-height: 400px;
-          overflow-y: auto;
+        max-height: 400px;
+        overflow-y: auto;
       }
       .document-editor .ck-content,
       .document-editor .ck-heading-dropdown .ck-list .ck-button__label {
@@ -174,23 +174,42 @@
                   </td>
                   <td>
                     <p>
-                      <span class="placeholder" name="username"
+                      <span
+                        class="placeholder"
+                        name="username"
+                        multiple="undefined"
                         >Назва профілю</span
                       >
                     </p>
                     <p>
-                      ІПН:&nbsp;<span class="placeholder" name="IPN">ІПН</span>
+                      ІПН:&nbsp;<span
+                        class="placeholder"
+                        name="IPN"
+                        multiple="undefined"
+                        >ІПН</span
+                      >
                     </p>
                     <p>
-                      <span class="placeholder" name="address">Адреса</span>
+                      <span
+                        class="placeholder"
+                        name="address"
+                        multiple="undefined"
+                        >Адреса</span
+                      >
                     </p>
                     <p>
-                      IBAN&nbsp;<span class="placeholder" name="IBAN"
+                      IBAN&nbsp;<span
+                        class="placeholder"
+                        name="IBAN"
+                        multiple="undefined"
                         >IBAN</span
                       >
                     </p>
                     <p>
-                      <span class="placeholder" name="isPayable"
+                      <span
+                        class="placeholder"
+                        name="isPayable"
+                        multiple="undefined"
                         >Платник податків</span
                       >
                     </p>
@@ -205,7 +224,11 @@
                   </td>
                   <td>
                     <p>&nbsp;</p>
-                    <p>&nbsp;</p>
+                    <p>
+                      <span class="placeholder" name="receiver" multiple="false"
+                        >Одержувач</span
+                      >
+                    </p>
                   </td>
                 </tr>
               </tbody>
@@ -275,7 +298,11 @@
               <tbody>
                 <tr>
                   <td><strong>Усього:</strong></td>
-                  <td><span class="placeholder" name="total">Усього</span></td>
+                  <td>
+                    <span class="placeholder" name="total" multiple="undefined"
+                      >Усього</span
+                    >
+                  </td>
                 </tr>
               </tbody>
             </table>
@@ -298,7 +325,10 @@
                       >
                     </p>
                     <p>
-                      <span class="placeholder" name="username"
+                      <span
+                        class="placeholder"
+                        name="username"
+                        multiple="undefined"
                         >Назва профілю</span
                       >
                     </p>
